--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,12 +6,12 @@
 </div>
 <div class="container" *ngIf="weatherData">
   <div class="upper-data">
-    <img src="../assets/summer.png" *ngIf="weatherData.main.temp > 15">
-    <img src="../assets/winter.png" *ngIf="weatherData.main.temp <= 15">
+    <img src="../assets/summer.png" *ngIf="weatherData.current.temp_c > 15">
+    <img src="../assets/winter.png" *ngIf="weatherData.current.temp_c <= 15">
 
     <div class="weather-data">
-      <div class="location">{{ weatherData.name }}</div>
-      <div class="temperature">{{ weatherData.main.temp | number: '1.0-0'}}°C</div>
+      <div class="location">{{ weatherData.location.name }}</div>
+      <div class="temperature">{{ weatherData.current.temp_c | number: '1.0-0'}}°C</div>
     </div>
   </div>
 
@@ -26,7 +26,7 @@
           <span>min</span>
         </div>
         <div class="info-block-value">
-          {{weatherData.main.tempmin | number: '1.0-0'}}°C
+          {{weatherData.current.temp_c | number: '1.0-0'}}°C
         </div>
       </div>
 
@@ -36,7 +36,7 @@
           <span>max</span>
         </div>
         <div class="info-block-value">
-          {{weatherData.main.temp_max | number: '1.0-0'}}°C
+          {{weatherData.current.temp_c | number: '1.0-0'}}°C
         </div>
       </div>
 
@@ -46,7 +46,7 @@
           <span>humidity</span>
         </div>
         <div class="info-block-value">
-          {{weatherData.main.humidity}}%
+          {{weatherData.current.humidity}}%
         </div>
       </div>
 
@@ -56,7 +56,7 @@
           <span>wind</span>
         </div>
         <div class="info-block-value">
-          {{weatherData.wind.speed}} km/h
+          {{weatherData.current.wind_kph}} km/h
         </div>
       </div>
     </div>
